FIx for share buttons being squished in ES

--- a/scss/_share-lightbox.scss
+++ b/scss/_share-lightbox.scss
@@ -65,7 +65,7 @@
         font-size: remCalc(14);
         margin-bottom: 16px;
         min-width: 200px;
-        padding: 15px 0 15px 45px;
+        padding: 15px 15px 15px 45px;
         position: relative;
         text-align: left;
         text-decoration: none;
@@ -73,7 +73,7 @@
         @include tablet-and-up {
             font-size: remCalc(16);
             min-width: 256px;
-            padding: 15px 0 15px 82px;
+            padding: 15px 50px 15px 82px;
         }
     }
 }
